<resources>
    <string name="app_name">1日一言メッセージ</string>
    <string name="edit">編集</string>
    <string name="list">一覧</string>
    <string name="setting">設定</string>
    <string name="previous_month">前の月</string>
    <string name="next_month">次の月</string>
    <string name="this_month">今日</string>
    <string name="erase">すべて消す</string>
    <string name="save">保存</string>
    <string name="add">追加</string>
    <string name="rename">変更</string>
    <string name="done">完了</string>
    <string name="first_inserted_tag_name">日記</string>
    <string name="cancel">キャンセル</string>
    <string name="all_erase">すべてのデータを削除</string>
    <string name="add_tag">カテゴリーを追加</string>
    <string name="erase_tag">カテゴリーを削除</string>
    <string name="rename_tag">カテゴリーの名前を変更</string>
    <string name="all_erase_tag">すべてのカテゴリーを削除</string>
    <string name="added">追加されました</string>
    <string name="not_added">カテゴリーの名前を入力してください</string>
    <string name="erase_tag_title">削除するカテゴリーを選んでください</string>
    <string name="rename_tag_title">名前を変更するカテゴリーを選んでください</string>
    <string name="chose_category_title">カテゴリーを選んでください</string>
</resources>
