<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ogchiharu.diary.ListActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list"
        android:id="@+id/listTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listView"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/listTitleTextView"
        android:layout_above="@+id/linearLayout2"
        android:layout_weight="6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/previous_month"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:onClick="previous" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/this_month"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:onClick="today" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next_month"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:onClick="next" />
    </LinearLayout>
</LinearLayout>
