<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ogchiharu.diary.SettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_tag"
                    android:id="@+id/button7"
                    android:background="@drawable/button"
                    android:onClick="addTag"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rename_tag"
                    android:id="@+id/button9"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:onClick="renameTag" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/erase_tag"
                    android:id="@+id/button8"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:onClick="eraseTag" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_erase"
                android:id="@+id/button6"
                android:background="@drawable/button"
                android:onClick="erase_all" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
