<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ogchiharu.diary.EditorActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/linearLayout7">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="date"
            android:id="@+id/editorDateText" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editorList"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/button"
            android:onClick="addDiary" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout7"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/erase"
                android:id="@+id/button10"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="eraseAll"
                android:layout_weight="1"
                android:layout_margin="5dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:id="@+id/button11"
                android:layout_below="@+id/button10"
                android:layout_centerHorizontal="true"
                android:onClick="done"
                android:layout_weight="1"
                android:layout_margin="5dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
